# pyspring-model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
py_spring_model/: __init__.py  py_spring_model_provider.py  py_spring_model_starter.py
py_spring_model/core/: commons.py  duplicate_import_handler.py  model.py  propagation.py  py_spring_session.py  registry_cleanup_handler.py  session_context_holder.py  transaction_manager.py
py_spring_model/docs/: query_operators.md
py_spring_model/py_spring_model_rest/: __init__.py
py_spring_model/repository/: crud_repository.py  repository_base.py
py_spring_model/spring_model_rest/: __init__.py
testcontainers-python/: SKILL.md
testcontainers-python/references/: modules.md
tests/: test_commons.py  test_crud_repository.py  test_crud_repository_find_all_by_ids.py  test_crud_repository_implementation_service.py  test_duplicate_import_fix.py  test_e2e_py_spring_model_provider.py  test_field_operations.py  test_handlers.py  test_implementation_service_edge_cases.py  test_integration_query_execution.py  test_method_query_builder.py  test_propagation_e2e.py  test_propagation_handler_protocol.py  test_py_spring_model.py  test_py_spring_model_error_paths.py  test_py_spring_model_rest_controller.py  test_py_spring_model_rest_service.py  test_py_spring_session.py  test_query_execution_service.py  test_query_execution_service_return_types.py  test_query_modifying_operations.py  test_relationship_query_integration.py  test_repository_base.py  test_rest_controller_route_handlers.py  test_session_context_holder.py  test_session_depth.py  test_session_middleware.py  test_transactional_decorator.py
tests/postgres/: conftest.py  test_crud_repository.py  test_crud_repository_find_all_by_ids.py  test_crud_repository_implementation_service.py  test_crud_repository_save_and_flush.py  test_e2e_py_spring_model_provider.py  test_field_operations.py  test_implementation_service_edge_cases.py  test_integration_query_execution.py  test_operator_edge_cases.py  test_propagation_e2e.py  test_py_spring_model.py  test_py_spring_model_error_paths.py  test_py_spring_model_rest_controller.py  test_py_spring_model_rest_service.py  test_py_spring_session.py  test_query_execution_service.py  test_query_execution_service_return_types.py  test_query_modifying_operations.py  test_relationship_query_integration.py  test_repository_base.py  test_rest_controller_route_handlers.py  test_session_depth.py  test_session_middleware.py  test_transactional_decorator.py
tests/sqlite/: conftest.py  (+24 more)
(+60 files in other folders)
