[project]
name = "py_spring_model"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "william_w_chen@trendmicro.com"},
]
dependencies = [
    "py-spring-core>=0.0.5",
    "isort>=5.13.2",
    "sqlmodel>=0.0.22",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = { source = "file", path = "py_spring_model/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.3",
    "isort>=5.13.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

