[project]
name = "py_spring_model"
dynamic = ["version"]
description = "A powerful Python ORM library built on SQLModel that provides automatic CRUD repositories, dynamic query generation, and seamless RESTful API integration with PySpring framework."
authors = [
    {name = "William Chen", email = "ow6201231@gmail.com"},
]
dependencies = [
    "py-spring-core>=0.3.5",
    "sqlmodel>=0.0.38",
]

requires-python = ">=3.11, <3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = { source = "file", path = "py_spring_model/__init__.py" }

# pdm install -d
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.3",
    "isort>=5.13.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that boot the full application",
]